SWAGGER: finalizada rota de horários
