# src/modules/schedules/update-schedule.controller.ts
@@ -22,14 +22,16 @@ export const updateScheduleController = async (req: Request, res: Response) => {
         }
 
         await updateSchedule(Number(userId), schedule)
-        console.log(schedule)
 
         res.status(200).json({ success: true, message: "Horários atualizados com sucesso" })
+    
     } catch (error) {
+
         console.error('Erro ao buscar configurações da loja:', error);
         res.status(500).json({
             success: false,
             message: error instanceof Error ? error.message : "Erro desconhecido"
         });
+
     }
 }
